k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-classifier-svc
  namespace: default
spec:
  selector:
    app: iris-classifier
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
