k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iris-classifier-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: iris-classifier.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iris-classifier-svc
            port:
              number: 80
